# neil-munoz-portfolio

./: .dockerignore  .env.docker.postgres.example  .env.example  .env.production.example  .gitattributes  .gitignore  .hintrc  .pre-commit-config.yaml  .railway-redeploy-marker  Dockerfile  Dockerfile.prod  LICENSE  Makefile  README.md  RELEASE_NOTES.md  UPDATE_STRATEGY.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_init_project_table.py  2d62ce3994ae_init.py
docs/: configuration.md  next-layer-architecture.md  production-hardening-checklist.md  production-runbook.md  production-smoke-test.md
docs/security/: environment-hardening-policy.md
infra/next/: README.md
infra/nginx/: default.conf  nginx.prod.conf
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf
scripts/: validate-env-policy.sh
src/app/: main.py
src/app/api/: router.py
src/app/api/email/: routes.py
src/app/api/routes/: __init__.py  health.py  projects.py  system.py  test_projects.py  web.py
src/app/core/: config.py  db.py  errors.py  logger.py  logging.py  middleware.py
src/app/domain/: project.py
src/app/models/: __init__.py  project.py
src/app/next_feature/email/: models.py
src/app/schemas/: project.py
src/app/services/: project_service.py
src/app/static/css/: styles.css
src/app/static/js/: cookies.js
src/app/templates/: index.html
src/app/templates/components/: cookie_banner.html
tests/: test_app.py  test_health.py  test_install.bats  test_projects.py
